--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Scanner</title>
+    <link rel="shortcut icon" href="./asset/favicon-32x32.png" type="image/x-icon">
+<link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
+    <div class="QRCard">
+        <div class="imageDiv">
+            <img src="./asset/image-qr-code.png" alt="QrImage">
+        </div>
+
+        <div class="contentDiv">
+
+        <h5>Improve Your Frontend Skills by Building Projects</h5>
+        <p>Scan the QR to vidit frontend-mentor and take your coding skills to next level</p>
+        </div>
+        
+    </div>
     
 </body>
 </html>
